plugins {
  id 'org.springframework.boot' version '2.6.4'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
}

group = 'io.event-driven'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
  useJUnitPlatform()
}

tasks.withType(JavaCompile) {
  options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
  jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
  jvmArgs += "--enable-preview"
}
